# Illustrate

./: .gitignore  Illustrate.command  LICENSE  Makefile  README.md  illustrate.ipynb  main.py  mkdocs.yml  pyproject.toml  render_demos.py
.github/: CODEOWNERS
.github/workflows/: release-packages.yml
data/: icon.icns
docs/: contributing.md  getting-started.md  index.md  reference.md  troubleshooting.md
docs/guide/: gui.md  jupyter.md  presets.md  selection-rules.md  web-api.md
docs/stylesheets/: extra.css
environment/: install_desktop.sh  run_gui.sh  setup.sh
environment/linux/: requirements.txt
environment/macos/: environment.yml  setup.sh
environment/windows/: requirements.txt  setup.ps1
illustrate/: __init__.py  cli.py  fetch.py  io.py  math3d.py  parser.py  pdb.py  presets.py  raster_kernel.py  render.py  render_pipeline.py  types.py
illustrate_gui/: __init__.py  __main__.py  app.py  autocomplete.py  flows.py  main.py  presets.py  updater.py  viewport.py  worker.py
illustrate_gui/panels/: __init__.py  outlines.py  rules.py  transform.py  world.py
illustrate_web/: __init__.py
illustrate_web/api/: __init__.py  deps.py  main.py  models.py
illustrate_web/frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
packaging/macos/: build_app.sh
tests/: test_cli.py  test_gpu_backend.py  test_gui_regressions.py  test_illustrate_domain.py  test_illustrate_regression.py  test_illustrate_synthetic.py  test_io.py  test_parser_edge_cases.py  test_pdb_parse_edges.py  test_presets.py  test_render_validation.py  test_web_api.py
(+22 files in other folders)
